--- a/MAYA.html
+++ b/MAYA.html
@@ -22,9 +22,7 @@
                     text-align:center;
                   }
 
-            img {text-align:center;
-              height: 75%
-              weight: 75%}
+
       </style>
 
 
@@ -33,13 +31,14 @@
 
 <body>
   <div class="container">
-    <nav>
+    <nav style= font-family: helvetica; color: #c9ffcc;>
       <a href="zine.html">Zine</a>     <a href="online works.html">Portfolio</a>      <a href="mysticstuff.html">Mystic Stuff</a>      <a href="Djing.html">Djing</a>     <a href="contactinfo.html">Contactinfo</a>
     </nav>
     <h1><i>MAYA ELIMELECH</i></h1>
 
-    <img src="moon.png">
-  </div>
 
+  </div>
+    <img src="moon.png" style= length: "auto";
+    weight: "50">
 </body>
 </html>
