--- a/contactinfo.html
+++ b/contactinfo.html
@@ -8,37 +8,22 @@
             margin-left: auto;
             margin-right: auto;
             }
-      body {background-image: url("woah.png")
+
+      body {background-image: url("grass back.png")
               }
 </style>
-    <title style="color:#c9ffcc">Contact Info</title>
+</head>
+    <title style="color:#c9ffcc; font-family: helvetica;">Contact Info</title>
 
-  </head>
+
 
   <body>
 
-    <h1 >
-      Olivia is <sub>really</sub> great
-      XD
-    </h1>
-    <hr>
-    <h2 style="color:purple;font-size:60px;text-align:center;"" font face="helvetica";>Olivia's Cancun Trip XD
-    I Wish I Was Invited :()</h2>
-        <img src="photos/olivia in cancun.png"style="width:50%;">
-          <hr>
-    <h3 style="color:purple;font-size:60px;text-align:center"; font face="helvetica">Olivia!! XD Look At That FAce</h3>
-        <img src="photos/olivia.jpg"width="500" height="500"style="width:50%;">
-          <hr>
-    <h4 style="color:purple;font-size:60px;text-align:center"; font face="helvetica">wowwww :))</h4>
-        <img src="photos/she artistic.png"width="500" height="500"style="width:50%;">
-          <hr>
-    <h5 style="color:purple;font-size:60px;text-align:center"; font face="helvetica">Her family, I Love Them XD</h5>
-        <img src="photos/family.png"width="500" height="500"style="width:50%;">
-          <hr>
+    <h1 style="color:#c9ffcc; font-family: helvetica;">Contact Info
 
-      <div>
-        <p style="color:white"; font face="helvetica">Olivia is so talented and smart. She in annenberg school of communication. Yesterday I thought about what would happen if I ran into her at a grocery store! I would be so awkward .owo. I wish she would notice me :/</p>
-      </div>
+    </h1>
+
+
     </body>
 
 </html>
