--- a/MAYA.html
+++ b/MAYA.html
@@ -10,6 +10,9 @@
                   margin-left: auto;
                   margin-right: auto;
                                       }
+
+
+
             body {background-image: url("grass back.png")}
             h1 {text-align:center;
                   font-size:60px;
@@ -22,11 +25,7 @@
                     text-align:center;
                   }
 
-
       </style>
-
-
-
       </head>
 
 <body>
@@ -34,11 +33,11 @@
     <nav style= font-family: helvetica; color: #c9ffcc;>
       <a href="zine.html">Zine</a>     <a href="online works.html">Portfolio</a>      <a href="mysticstuff.html">Mystic Stuff</a>      <a href="Djing.html">Djing</a>     <a href="contactinfo.html">Contactinfo</a>
     </nav>
-    <h1><i>MAYA ELIMELECH</i></h1>
 
 
+  <h1><i>MAYA ELIMELECH</i></h1>
+  <img src="untitled-3.png" style= "width:100%">
   </div>
-    <img src="moon.png" style= length: "auto";
-    weight: "50">
+    <img src="moon.png" style= "width:100%">
 </body>
 </html>
