--- a/contactinfo.html
+++ b/contactinfo.html
@@ -13,15 +13,17 @@
               }
 </style>
 </head>
-    <title style="color:#c9ffcc; font-family: helvetica;">Contact Info</title>
+    <title style="color:#c9ffcc; font-family: helvetica; text-align:center;">Contact Info</title>
 
 
 
   <body>
 
-    <h1 style="color:#c9ffcc; font-family: helvetica;">Contact Info
+    <h1 style="color:#c9ffcc; font-family: helvetica;text-align:center;font-size:60px;"><em>Contact Info</em>
 
     </h1>
+    <p1>Maya Elimelech
+      email: elimelechmaya@gmail.com </p1>
 
 
     </body>
