--- a/Zine.html
+++ b/Zine.html
@@ -17,31 +17,31 @@
             h1 {text-align:center;
                   font-size:60px;
                   font-family: helvetica;
-                  color: #c9ffcc;}
+                  color: black}
 
-                  .container {
+                  .container {background: #c9ffcc;
                     width:600px;
                     margin: auto;
                     text-align:center;
                   }
+             a { style= "font-family:helvetica; color: #c9ffcc; background: #10005f"}
 
       </style>
       </head>
 
 <body>
   <div class="container">
+
     <nav style= "font-family:helvetica; color: #c9ffcc; background: #10005f">
 
       <a href="zine.html">Zine</a>     <a href="online works.html">Portfolio</a>      <a href="mysticstuff.html">Mystic Stuff</a>      <a href="Djing.html">Djing</a>     <a href="contactinfo.html">Contactinfo</a>
     </nav>
 
 
-  <h1><i>
-MAYA ELIMELECH
+  <h1><i>ZINE
 
 </i></h1>
   <img src="untitled-3.png" style= "width:100%">
   </div>
-    <img src="moon.png" style= "width:100%">
 </body>
 </html>
