--- a/contactinfo.html
+++ b/contactinfo.html
@@ -22,7 +22,7 @@
     <h1 style="color:#c9ffcc; font-family: helvetica;text-align:center;font-size:60px;"><em>Contact Info</em>
 
     </h1>
-    <p1>Maya Elimelech
+    <p1 style="color:#c9ffcc; font-family: helvetica;text-align:center;>Maya Elimelech
       email: elimelechmaya@gmail.com </p1>
 
 
