--- a/MAYA.html
+++ b/MAYA.html
@@ -32,7 +32,7 @@
   <div class="container">
     <nav style= "font-family:helvetica; color: #c9ffcc; background: #10005f">
 
-      <a href="zine.html">Zine</a>     <a href="online works.html">Portfolio</a>      <a href="mysticstuff.html">Mystic Stuff</a>      <a href="Djing.html">Djing</a>     <a href="contactinfo.html">Contactinfo</a>
+      <a href="MAYA.html">HOME</a> <a href="zine.html">ZINE</a>     <a href="online works.html">PORTFOLIO</a>      <a href="mysticstuff.html">MYSTIC STUFF</a>      <a href="Djing.html">MUSIC</a>     <a href="contactinfo.html">CONTACT</a>
     </nav>
 
 
