--- a/Portfolio.html
+++ b/Portfolio.html
@@ -34,11 +34,11 @@
 
     <nav style= "font-family:helvetica; color: #c9ffcc; background: #10005f">
 
-      <a href="zine.html">Zine</a>     <a href="online works.html">Portfolio</a>      <a href="mysticstuff.html">Mystic Stuff</a>      <a href="Djing.html">Djing</a>     <a href="contactinfo.html">Contactinfo</a>
-    </nav>
+      <a href="MAYA.html">HOME</a> <a href="zine.html">ZINE</a>     <a href="online works.html">PORTFOLIO</a>      <a href="mysticstuff.html">MYSTIC STUFF</a>      <a href="Djing.html">MUSIC</a>     <a href="contactinfo.html">CONTACT</a>
 
 
-  <h1><i>Portfolio
+
+  <h1><i>PORTFOLIO
 
 </i></h1>
   <img src="untitled-3.png" style= "width:100%">
