--- a/contactinfo.html
+++ b/contactinfo.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+
+
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <style>
-        img {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            }
-
-      body {background-image: url("grass back.png")
-              }
-</style>
-</head>
-    <title style="color:#c9ffcc; font-family: helvetica; text-align:center;">Contact Info</title>
+            img {
+                  display: block;
+                  margin-left: auto;
+                  margin-right: auto;
+                                      }
 
 
 
-  <body>
+            body {background-image: url("grass back.png")}
+            h1 {text-align:center;
+                  font-size:60px;
+                  font-family: helvetica;
+                  color: black}
 
-    <h1 style="color:#c9ffcc; font-family: helvetica;text-align:center;font-size:60px;"><em>Contact Info</em>
+                  .container {background: #c9ffcc;
+                    width:600px;
+                    margin: auto;
+                    text-align:center;
+                  }
+             a { style= "font-family:helvetica; color: #c9ffcc; background: #10005f"}
 
-    </h1>
-    <p1 style="color:#c9ffcc; font-family: helvetica;text-align:center;>Maya Elimelech
-      email: elimelechmaya@gmail.com </p1>
+      </style>
+      </head>
+
+<body>
+  <div class="container">
+
+    <nav style= "font-family:helvetica; color: #c9ffcc; background: #10005f">
+
+    <a href="MAYA.html">HOME</a>  <a href="zine.html">ZINE</a>     <a href="online works.html">PORTFOLIO</a>      <a href="mysticstuff.html">MYSTIC STUFF</a>      <a href="Djing.html">MUSIC</a>     <a href="contactinfo.html">CONTACT</a>
+    </nav>
 
 
-    </body>
+  <h1><i>CONTACT INFO
 
+</i></h1>
+  <img src="untitled-3.png" style= "width:100%">
+  </div>
+</body>
 </html>
