--- a/MAYA.html
+++ b/MAYA.html
@@ -20,23 +20,53 @@
                   color: #c9ffcc;}
 
                   .container {
-                    width:600px;
+                    width:80%;
                     margin: auto;
                     text-align:center;
                   }
+            header::after{
+              content: '';
+              display: table;
+              clear: both;
+            }
+            nav {float: right;}
+            nav ul {
+            margin: 0 ;
+            pading:0;
+            list style: none;
+        }
+        nav li {
+          display: inline-block;
+          margin-left: 90px;
+          padding-top: 25px;
+
+        }
+        nav a {
+          color: white;
+          text-decoration: none;
+          display:block;
+        }
 
       </style>
       </head>
 
 <body>
   <div class="container">
-    <nav style= "font-family:helvetica; color: #c9ffcc; background: #10005f">
+    <nav style= "font-family:helvetica; color: #c9ffcc;">
+        <ul>
 
-      <a href="MAYA.html">HOME</a> <a href="zine.html">ZINE</a>     <a href="online works.html">PORTFOLIO</a>      <a href="mysticstuff.html">MYSTIC STUFF</a>      <a href="Djing.html">MUSIC</a>     <a href="contactinfo.html">CONTACT</a>
+           <li><a href="MAYA.html">HOME</a>
+           <li><a href="zine.html">ZINE</a></li>
+           <li><a href="online works.html">PORTFOLIO</a></li>
+           <li><a href="mysticstuff.html">MYSTIC STUFF</a> </li>
+           <li><a href="Djing.html">MUSIC</a></li>
+           <li><a href="contactinfo.html">CONTACT</a></li>
+         </ul>
     </nav>
 
 
   <h1><i>
+    <br>
 MAYA ELIMELECH
 
 </i></h1>
