--- a/MAYA.html
+++ b/MAYA.html
@@ -24,12 +24,14 @@
                     margin: auto;
                     text-align:center;
                   }
+
+
             header::after{
               content: '';
               display: table;
               clear: both;
             }
-            nav {float: right;}
+            nav {float: center;}
             nav ul {
             margin: 0 ;
             pading:0;
@@ -57,7 +59,7 @@
 
            <li><a href="MAYA.html">HOME</a>
            <li><a href="zine.html">ZINE</a></li>
-           <li><a href="online works.html">PORTFOLIO</a></li>
+           <li><a href="Portfolio.html">PORTFOLIO</a></li>
            <li><a href="mysticstuff.html">MYSTIC STUFF</a> </li>
            <li><a href="Djing.html">MUSIC</a></li>
            <li><a href="contactinfo.html">CONTACT</a></li>
@@ -69,8 +71,9 @@
     <br>
 MAYA ELIMELECH
 
+
 </i></h1>
-  <img src="untitled-3.png" style= "width:100%">
+
   </div>
     <img src="moon.png" style= "width:100%">
 </body>
