--- a/MAYA.html
+++ b/MAYA.html
@@ -75,6 +75,18 @@ MAYA ELIMELECH
 </i></h1>
 
   </div>
+  <IMG SRC="giphy.gif">
     <img src="moon.png" style= "width:100%">
+    <div>
+    <ul style="border:3px; color: white; border-style:solid; border-color: white; padding: 1em;">
+
+        <li>im a human
+          <li>i write poetry
+              <li>check it out!
+                <li>lemme do your cards baby
+                  <li>i make tunes also
+                    <li>thanks for stopping by
+                    </ul>
+</div>
 </body>
 </html>
