--- a/mysticstuff.html
+++ b/mysticstuff.html
@@ -18,6 +18,15 @@
                   font-size:60px;
                   font-family: helvetica;
                   color: black}
+            h2 {text-align:center;
+                  font-size:80px;
+                  font-family: helvetica;
+                  color: pink}
+            h3{text-align:center;
+                  font-size:80px;
+                  font-family: helvetica;
+                  color: pink}
+            p {font-family: helvetica}
 
                                     .container {background: #c9ffcc;
                                       width:800px;
@@ -65,10 +74,27 @@
                             </ul>
                        </nav>
 
-  <h1><i>MYSTIC STUFF
+                        <h1><i>MYSTIC STUFF
 
-</i></h1>
-  
-  </div>
-</body>
+                          </i></h1>
+
+
+
+                            <h2><font-family: helvetica;>
+                                  readings
+                                  </font></h2>
+                                      <p style="text-align: center;">
+                                          30 minute tarot readings for $20 <br>
+                                          60 minutes for $30 <br>
+                                          Full natal chart for $30<br>
+
+                                          email: elimelechmaya@gmail.com
+                                            </p>
+                            <h3>
+                                          dream of the week
+                                            </h3>
+                            <p style="text-align: center; font-size: 40"; >
+                                            (this is where we talk about dreams)
+                                            Submit any dreams or dream inquiries to elimelechmaya@gmail.com
+                                              </p>
 </html>
