--- a/contactinfo.html
+++ b/contactinfo.html
@@ -68,9 +68,15 @@
   <h1><i>CONTACT INFO
 
 </i></h1>
-<p1>
-  
+<p style= "padding-bottom: 25px; border-color: black;  border-style: solid;
+  border-width: 5px;">
 
+  inquity email: elimelechmaya@gmail.com <br>
+  # (even if you just wanna be friends): 1(818)251-6508
+</p>
+<br>
+<br>
+<br>
   </div>
 </body>
 </html>
