--- a/poem_site/mirror.html
+++ b/poem_site/mirror.html
@@ -21,8 +21,8 @@ body {
   <div id="some-div">
 
   <video controls>
-    <video width="320" height="240" autoplay>
-      <source src="mirror.mov" type="video/mov">
+    <video width="600px" height="800px" autoplay>
+      <source src="mirror.mp4" type="video/mp4">
       <source src="movie.ogg" type="video/ogg">
       Your browser does not support the video tag.
     </video>
