--- a/poem_site/mirror.html
+++ b/poem_site/mirror.html
@@ -20,9 +20,9 @@ body {
 </style>
   <div id="some-div">
 
-  <video controls>
-    <video width="900px" height="1200px" autoplay>
+    <video width="320" height="240" controls>
       <source src="mirror.mp4" type="video/mp4">
+      <source src="mirror.ogg" type="video/ogg">
       Your browser does not support the video tag.
     </video>
 
