--- a/Class_1/index.html
+++ b/Class_1/index.html
@@ -1,32 +1,43 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title style="color:red">Olivia</title>
-    <link rel="stylesheet"href="main.css">
-    <nav>
-      <a href="#"
-    </nav>
-
-  <body>
-    <div style="color: pink;">
-      <p>one pink</p>
-      <p>two pink</p>
-      </div>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+      <style>
+        img {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            }
+      body {background-image: url("photos/clouds.jpg")
+              }
+</style>
+    <title style="color:purple">Olivia</title>
+    <link rel="stylesheet" href "main.css" /link>
   </head>
-    <header>
-      Olivia is great
-    </header>
-    <h1>Olivia's Cancun Trip</h2>
-      <img src="olivia in cancun.png">
-    <h2>Olivia!!</h2>
-      <img src="olivia.jpg">
-    <h3>wowwww</h3>
-      <img src="she artistic.png">
-    <h4>Her family</h4>
-      <img src="family.png">
+
+  <body style="background-color:#ff99ff">
+
+    <h1 style="color:white;"">
+      Olivia is <sub>really</sub> great
+      XD
+    </h1>
+    <hr>
+    <h2 style="color:purple;font-size:60px;text-align:center;"" font face="helvetica";>Olivia's Cancun Trip XD
+    I Wish I Was Invited :()</h2>
+        <img src="photos/olivia in cancun.png"style="width:50%;">
+          <hr>
+    <h3 style="color:purple;font-size:60px;text-align:center"; font face="helvetica">Olivia!! XD Look At That FAce</h3>
+        <img src="photos/olivia.jpg"width="500" height="500"style="width:50%;">
+          <hr>
+    <h4 style="color:purple;font-size:60px;text-align:center"; font face="helvetica">wowwww :))</h4>
+        <img src="photos/she artistic.png"width="500" height="500"style="width:50%;">
+          <hr>
+    <h5 style="color:purple;font-size:60px;text-align:center"; font face="helvetica">Her family, I Love Them XD</h5>
+        <img src="photos/family.png"width="500" height="500"style="width:50%;">
+          <hr>
 
       <div>
-        <p>Olivia is so talented and smart. I wish she would notice me :/</p>
+        <p style="color:white"; font face="helvetica">Olivia is so talented and smart. She in annenberg school of communication. Yesterday I thought about what would happen if I ran into her at a grocery store! I would be so awkward .owo. I wish she would notice me :/</p>
       </div>
     </body>
 
