--- a/index.html
+++ b/index.html
@@ -130,9 +130,8 @@ font-family: PTSerif-Italic;
     <source src="sparkle overlay_1.mp4" type="video/mp4">
   </video>
 
-<h2>Night of Blue and Flowers</h2>
-<h3 class="contact">contact: elimelechmaya@gmail.com<br>
-  contact: taylorjuleen@gmail.com</h3>
+<h2>Maya Elimelech</h2>
+<h3 class="contact">contact: elimelechmaya@gmail.com<br>contact: taylorjuleen@gmail.com</h3>
 
 <div>
 <img id= "circle" src="unnamed.png" width="600" height="750" >
