--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ font-family: PTSerif-Italic;
   </video>
 
 <h2>Maya Elimelech</h2>
-<h3 class="contact">contact: elimelechmaya@gmail.com<br>contact: taylorjuleen@gmail.com</h3>
+<h3 class="contact">contact: elimelechmaya@gmail.com</h3>
 
 <div>
 <img id= "circle" src="unnamed.png" width="600" height="750" >
